--- a/img.html
+++ b/img.html
@@ -5,6 +5,7 @@
 	<title>图片轮播</title>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="src/img.css">
+	<script type="text/javascript" src="src/img.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -23,6 +24,8 @@
 			</div>
 		</div>
 	</div>	
-	<script type="text/javascript" src="src/img.js"></script>
+	<script type="text/javascript">
+		picInit();
+	</script>
 </body>
 </html>
