--- a/img.html
+++ b/img.html
@@ -5,7 +5,7 @@
 	<title>图片轮播</title>
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="src/img.css">
-	<script type="text/javascript" src="src/img.js"></script>
+	<script type="text/javascript" src="src/img.js"></script>	
 </head>
 <body>
 	<div class="container">
@@ -24,8 +24,21 @@
 			</div>
 		</div>
 	</div>	
+	<div class="containerOver">
+		<div class="imageContainerOver">
+			<img src="src/img/1.jpg" alt="">	
+			<img src="src/img/2.jpg" alt="">
+			<img src="src/img/3.jpg" alt="">				
+			<img src="src/img/4.jpg" alt="">	
+			<img src="src/img/1.jpg" alt="">	
+			<img src="src/img/2.jpg" alt="">
+			<img src="src/img/3.jpg" alt="">				
+			<img src="src/img/4.jpg" alt="">														
+		</div>
+	</div>
 	<script type="text/javascript">
 		picInit();
+		picOverInit();	
 	</script>
 </body>
 </html>
